force-app/main/default/objects/smagicinteract__License_Type__c/fields/smagicinteract__Category__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>PowerPartner</fullName>
            </value>
            <value>
                <fullName>CSPLitePortal</fullName>
            </value>
            <value>
                <fullName>CustomerSuccess</fullName>
            </value>
            <value>
                <fullName>PowerCustomerSuccess</fullName>
            </value>
            <value>
                <fullName>CsnOnly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>