force-app/main/default/objects/smagicinteract__License_Type__c/fields/smagicinteract__Description__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>