force-app/main/default/objects/smagicinteract__License_Type__c/fields/smagicinteract__Expiry__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Expiry__c</fullName>
    <label>Expiry</label>
    <type>DateTime</type>
</CustomField>