force-app/main/default/objects/smagicinteract__License_Type__c/fields/smagicinteract__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>