force-app/main/default/objects/smagicinteract__License_Type__c/fields/smagicinteract__License_Code__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__License_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>License Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>