force-app/main/default/objects/smagicinteract__License_Type__c/fields/smagicinteract__License_Used__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__License_Used__c</fullName>
    <label>License Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>