force-app/main/default/objects/smagicinteract__License_Type__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__License_Allocated__c</columns>
    <columns>smagicinteract__License_Code__c</columns>
    <columns>smagicinteract__License_Used__c</columns>
    <columns>smagicinteract__Expiry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>